# KeyValueDB

./: .gitignore  CMakeLists.txt  KeyValueDB  KeyValueDB.c  KeyValueDB.h  Main  Main.c  Main.h  Makefile  NodeMethods.c  NodeMethods.h  README.md  Utils.c  Utils.h  db.txt  main  main.c  main.h  makefile
headerfiles/: FileReading.h  FileWriting.h  KeyValueDB.h  Validation.h
sourcefiles/: FileReading.c  FileWriting.c  KeyValueDB.c  Validation.c
